Fix long word content overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,8 @@ body {
 	display: flex;
 	flex-direction: column;
 	height: 100%;
+	word-wrap: break-word;
+	overflow-wrap: break-word;
 	background-color: #f7f7f7;
 	-webkit-font-smoothing: antialiased;
 }
